fixes alignment of names and links in footer

--- a/Green_Orchard/Frontend/Dummy/styles/footer.css
+++ b/Green_Orchard/Frontend/Dummy/styles/footer.css
@@ -7,27 +7,29 @@ body {
     background-color: lightgray;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 1%;
+    padding: 0.5%;
+    width: 100%;
 }
 
 .Copyright {
     margin-right: auto;
-    width: 20%;
+    width: 15%;
     font-weight: bold;
     border-right: 1px solid black;
 }
 
 .OurInfo {
     /* border: 1px solid red; */
-    width: 100%;
+    width: inherit;
     float: left;
     align-content: center;
     border-left: 1px solid black;
+    justify-content: space-evenly;
 }
 
 .OurInfo p {
-    margin-left: 22%;
+    margin-left: 13%;
+    margin-right: 8%;
     display: inline-block;
 }
 
